%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BossZombie
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: AttackingParam
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: DeadParam
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: ChargeParam
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110763276}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110111786
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110274678}
  m_DstState: {fileID: 110274678}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110120632
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110248062}
  m_DstState: {fileID: 110248062}
  m_TransitionDuration: .107142851
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .892857134
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110141740
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278736}
  m_DstState: {fileID: 110235352}
  m_TransitionDuration: .0652173907
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .934782624
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110143052
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110234916}
  m_DstState: {fileID: 110278736}
  m_TransitionDuration: .0955413952
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .904458582
  - m_ConditionMode: 5
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110164158
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110229726}
  m_DstState: {fileID: 110226756}
  m_TransitionDuration: .0749999955
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .925000012
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110165630
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110209254}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: ChargeParam
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166666
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278736}
  m_DstState: {fileID: 110234916}
  m_TransitionDuration: .0652173907
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .930000007
  - m_ConditionMode: 5
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .930000007
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110178924
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110234916}
  m_DstState: {fileID: 110235352}
  m_TransitionDuration: .0955413952
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .904458582
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110185784
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209254}
  m_DstState: {fileID: 110234916}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110191592
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110229726}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: DeadParam
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110194182
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235352}
  m_DstState: {fileID: 110234916}
  m_TransitionDuration: .31249997
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .6875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110198912
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110209254}
  m_DstState: {fileID: 110235352}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: AttackingParam
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110209254
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Decision
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 97012ca6dd928ac43a89ef979eb16006, type: 3}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110793994}
  m_Position: {x: 360, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110226756
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: dying idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 187767740cdb60644a80172f2db24967, type: 3}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110776236}
  m_Position: {x: 456, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110229726
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: zombie_dying
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: bcccb2af8e008364f80cd1476c9dc8d6, type: 2}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110776236}
  m_Position: {x: 444, y: -60, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110234916
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: zombie_attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: aa3a127d04f8c4f4b9730ea2f25b861f, type: 2}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110793994}
  m_Position: {x: 672, y: -192, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110235352
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: zombie_running
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 25c4b7a329936ca4d814a3da117c4cd8, type: 2}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110793994}
  m_Position: {x: 624, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110244396
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: zombie_idle3
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4a4e05c6bcfc48e49a2ed811a52ef4c2, type: 2}
  m_ParentStateMachine: {fileID: 110763276}
  m_Position: {x: 180, y: -276, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110278736
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: zombie_punching
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 843be7b17f09619489f77f5efc0b2c62, type: 2}
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110793994}
  m_Position: {x: 840, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110763276
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: State
  m_DefaultState: {fileID: 110244396}
  m_States:
  - {fileID: 110244396}
  m_ChildStateMachine:
  - {fileID: 110793994}
  - {fileID: 110776236}
  m_ChildStateMachinePosition:
  - {x: 60, y: -372, z: 0}
  - {x: 288, y: -372, z: 0}
  m_OrderedTransitions:
    data:
      first: {fileID: 110244396}
      second: []
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110165630}
      - {fileID: 110191592}
    data:
      first: {fileID: 110209254}
      second:
      - {fileID: 110185784}
      - {fileID: 110198912}
    data:
      first: {fileID: 110226756}
      second: []
    data:
      first: {fileID: 110229726}
      second:
      - {fileID: 110164158}
    data:
      first: {fileID: 110234916}
      second:
      - {fileID: 110143052}
      - {fileID: 110178924}
    data:
      first: {fileID: 110235352}
      second:
      - {fileID: 110194182}
    data:
      first: {fileID: 110278736}
      second:
      - {fileID: 110166666}
      - {fileID: 110141740}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 576, y: -276, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110776236
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Dying
  m_DefaultState: {fileID: 0}
  m_States:
  - {fileID: 110229726}
  - {fileID: 110226756}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions: {}
  m_MotionSetCount: 2
  m_AnyStatePosition: {x: 468, y: -144, z: 0}
  m_ParentStateMachinePosition: {x: 876, y: -132, z: 0}
--- !u!1107 &110793994
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_DefaultState: {fileID: 110209254}
  m_States:
  - {fileID: 110209254}
  - {fileID: 110234916}
  - {fileID: 110235352}
  - {fileID: 110278736}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions: {}
  m_MotionSetCount: 2
  m_AnyStatePosition: {x: 144, y: 24, z: 0}
  m_ParentStateMachinePosition: {x: 72, y: -96, z: 0}
